[html] input에 id값 주고 lable을 밑에 생성에서 for로 연결

--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SideMenu</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <main>
-        <label class="menu-btt"><input type="checkbox">Menu</label>
+        <input id="checkbox" type="checkbox">
+        <label for="checkbox" class="menu-btt">Menu</label>
     </main>
     <section>
         <h1>북마크</h1>
