[html] 메뉴 아이콘 추가

--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SideMenu</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <main>
         <input id="checkbox" type="checkbox">
-        <label for="checkbox" class="menu-btt">Menu</label>
+        <label for="checkbox" class="menu-btt"><span class="material-icons">
+            menu
+            </span>Menu</label>
     </main>
     <section>
         <h1>북마크</h1>
