[css] 메뉴 버튼 스타일링

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
     <main>
         <input id="checkbox" type="checkbox">
-        <label for="checkbox" class="menu-btt"><span class="material-icons">
-            menu
-            </span>Menu</label>
+        <label for="checkbox" class="menu-btt">
+            <span class="material-icons">menu</span>
+            Menu</label>
     </main>
     <section>
         <h1>북마크</h1>
