[css] 북마크 사이드바 스타일링

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     <section>
         <h1>북마크</h1>
         <ul class="bookmark-lists">
-            <li class="bookmark">북마크1</li>
-            <li class="bookmark">북마크2</li>
-            <li class="bookmark">북마크3</li>
-            <li class="bookmark">북마크4</li>
-            <li class="bookmark">북마크5</li>
+            <li class="bookmark"><a href="#">북마크1</a></li>
+            <li class="bookmark"><a href="#">북마크2</a></li>
+            <li class="bookmark"><a href="#">북마크3</a></li>
+            <li class="bookmark"><a href="#">북마크4</a></li>
+            <li class="bookmark"><a href="#">북마크5</a></li>
         </ul>
     </section>
 </body>
