[html] 체크박스를 버튼으로 교체

--- a/index.html
+++ b/index.html
@@ -10,14 +10,9 @@
 </head>
 <body>
     <main>
-        <!-- <input id="checkbox" type="checkbox">
-        <label for="checkbox" class="menu-btt">
-            <span class="material-icons">menu</span>
-            Bookmark</label> -->
-            <label> <span class="material-icons">menu</span>
-                <input type="button" value="Bookmark" class="bookmark-btt"></label>
-            
-        
+        <label> <span class="material-icons">menu</span>
+            <input type="button" value="Bookmark" class="bookmark-btt">
+        </label>
         <section>
             <h1>북마크</h1>
             <ul class="bookmark-lists">
